2018-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix an issue that resulted in overestimation of remat costs.
	* src/stm8/peeph.def:
	  Optimize out dead loads from stack.

2018-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve wide arithmetic right shift.

2018-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.h,
	  src/stm8/gen.c:
	  Basic support for rematerialization of stack addresses.

2018-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve wide addition.

2018-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve 32-bit right shift by 6 to 7.

2018-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCopt.c:
	  Port an operand narrowing optimization to UNARYMINUS.
	* src/stm8/gen.c:
	  Improve handling of trailing 0 in wide comparison.

2018-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/structassign.c:
	  Use exactly representable values in union assignment test.
	* src/SDCClospre.cc:
	  Prepare for use of different container types.
	* src/SDCCtree_dec.hpp:
	  Cleanup.

2018-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* Merge next branch.

2018-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp:
	  Cherry-pick a minor performance improvement from lospre-vs-mcpre branch.

2018-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Remove hard dependencies on std::set to allow future transition to other containers.

2018-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/valdiag/tests/struct.c,
	  support/valdiag/tests/structflexiblearray.c:
	  Fix bugs #2774, 2775.

2018-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCCralloc.hpp: