@@ -37,9 +37,5 @@
 #define _SDCC_MANGLES_SUPPORT_FUNS	1
 #define _SDCC_Z80_STYLE_LIB_OPT		1
 
-#define _SDCC_PORT_PROVIDES_MEMCPY	0
-#define _SDCC_PORT_PROVIDES_STRCMP	0
-#define _SDCC_PORT_PROVIDES_STRCPY	0
-
 #endif
 
