@@ -1,7 +1,7 @@
 /*-------------------------------------------------------------------------
-   features.h - GBZ80 specific features.
+   _memcpy.c - part of string library functions
 
-   Copyright (C) 2001, Michael Hope
+   Copyright (C) 1999, Sandeep Dutta . sandeep.dutta@usa.net
 
    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
@@ -10,10 +10,10 @@
 
    This library is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 
-   You should have received a copy of the GNU General Public License 
+   You should have received a copy of the GNU General Public License
    along with this library; see the file COPYING. If not, write to the
    Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
    MA 02110-1301, USA.
@@ -26,15 +26,17 @@
    might be covered by the GNU General Public License.
 -------------------------------------------------------------------------*/
 
-#ifndef __SDC51_ASM_GBZ80_FEATURES_H
-#define __SDC51_ASM_GBZ80_FEATURES_H   1
+#include <string.h>
 
-#define _REENTRANT
-#define _CODE
-#define _AUTOMEM
-#define _STATMEM
+void *__memcpy (void *dst, const void *src, size_t n)
+{
+	void *ret = dst;
+	char *d = dst;
+	const char *s = src;
 
-#define _SDCC_MANGLES_SUPPORT_FUNS	1
-#define _SDCC_Z80_STYLE_LIB_OPT		1
+	while (n--)
+		*d++ = *s++;
 
-#endif
+	return(ret);
+}
+
